# path-tracer

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
data/: bunny.json  cornell-box-mirror.json  cornell-box-sphere-texture.json  cornell-box-sphere.json  cornell-box.json  material-1.json  material-gray-rocks.json  material-hessian.json  material-metal-plate.json  material-rusty-metal.json  material-wood-floor-deck.json  material.json  piece.json  sphere.json  triangle.json
data/CornellBox/: CornellBox-Empty-CO.mtl  CornellBox-Empty-RG.mtl  CornellBox-Mirror.mtl  CornellBox-Original.mtl
data/material_test/: material_test.mtl
data/mori_knob/: test1.mtl
src/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Intersection.h  Light.h  LightSource.h  Material.h  Object.h  Options.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleSoup.cpp  TriangleSoup.h  barycentric_interpolation.h  blinn_phong_shading.cpp  blinn_phong_shading.h  brdf.cpp  brdf.h  creative.json  first_hit.cpp  first_hit.h  main.cpp  path_tracing.cpp  path_tracing.h  ray_color.cpp  ray_color.h  raycolor.cpp  raycolor.h  read_json.cpp  read_json.h  (+8 more)
src/bvh/: AABB.cpp  AABB.h  AABBTree.cpp  AABBTree.h  build_bvh.cpp  build_bvh.h
src/geometry/: Geometry.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/material/: Color.h  Constant.h  Material.h  Sampler.h  Texture.h
src/object/: Object.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/objects/: Object.cpp  Object.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/reader/: gamma_transform.h  read_json.cpp  read_json.h  read_obj.cpp  read_obj.h  read_texture.h
src/util/: ProgressBar.cpp  ProgressBar.h  Timer.cpp  Timer.h  random.cpp  random.h  write_ppm.cpp
src/utils/: ProgressBar.cpp  ProgressBar.h  Timer.cpp  Timer.h  write_ppm.cpp  write_ppm.h
